added: function making heredoc tmpfile

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
 			"name": "mandatory",
 			"type": "lldb",
 			"request": "launch",
-			"program": "${workspaceFolder}/push_swap/push_swap",
-			"args": ["1 1"],
+			"program": "${workspaceFolder}/pipex/pipex",
+			"args": ["here_doc", "limiter", "test2", "test3", "test4"],
 			"stopAtEntry": false,
 			"cwd": "${fileDirname}",
 			"environment": [],
