--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -6,7 +6,7 @@
 #    By: tjo <tjo@student.42seoul.kr>               +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/31 12:48:31 by tjo               #+#    #+#              #
-#    Updated: 2022/11/09 01:46:52 by tjo              ###   ########.fr        #
+#    Updated: 2022/11/09 03:03:33 by tjo              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ CFLAGS = -Wall -Wextra -Werror -g3 -ggdb
 
 LIBFT = ft_mylibft/libft.a
 LIBFT_SRCS = ft_mylibft
-SRCS = ft_main.c
+SRCS = ft_main.c ft_piping.c
 
 ifdef BONUS
 	NAME = checker
